--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 out
-src/characters.Hero.java
-src/characters.Monster.java
+src/lsg.characters.Hero.java
+src/lsg.characters.Monster.java
 src/lsg.LearningSoulsGame.java
